Changelog
=========

1.8 - (unreleased)
------------------
 * Bug fix: Fixed adding policy document with '(' in title [tiberich #3614]
 * Bug fix: Link directly to Scientific Reference if they don't have a remote url [tiberich #3646]
 * Bug fix: Improved portlet readiness display for Assessments [tiberich #3606]
 * Feature: Added custom faceted widget to be used in sorting indicators [tiberich #3502]
 * Change: Made assessment agg edit to reload the portlet readiness [tiberich #3605]

1.7 - (2010-09-06)
------------------
 * Change: Added two new checks on Assessment readiness [tiberich 3603]
 * Feature: Show links to missing fields from the portlet for readiness, on agg edit [tiberich 3598]
 * Change: Fixed some design issues with switch box not visible and alignment of toc and metabox [demarant].
 * Feature: Use the multiselect autocomplete widget for Ownership in Spec agg edit [tiberich 3597]
 * Bug fix: Override FactSheetDocument.index_html() to avoid recursion error [tiberich 3533]
 * Change: Added tooltips to all fields on aggregated edit [ghicaale #3420]
 * Bug fix: Updated broken internal urls to EEA mamagement plan system [demarant]
 * Bug fix: Fixed javascript error when reloading relateditems fragment [tiberich #3591]
 * Bug fix: Fixed javascript in advanced edit for relations widget [tiberich #3579]
 * Change: The add menu in the Specification and Assessment view and edit pages is now hidden [tiberich #3583]
 * Bug fix: Fixed the ims_timeline view [tiberich #3071]
 * Bug fix: Show member fullname and workflow state title in @@ims_overview [tiberich #3071]
 * Bug fix: Now "relatedItems" values are kept when creating a
     new Specification version [ghicaale #3582]
 * Change: Moved the Manager id edit field to the general metadata area. Small editorial changes. [demarant #3548]
 * Bug fix: Tests fixed after changing product name [ghicaale]
 * Feature: Use new filtering select widget for provider_url and dataset_url [tiberich #3530]